Allow inheritance in plan description